# sherlock-scope

./: .directory  CMakeLists.txt  README.md  manifest.json.in  sherlock.desktop.in
app/: CMakeLists.txt  sherlock.content-hub
app/po/: sherlock.mefrio-g.pot
app/qml/: CMakeLists.txt  sherlock.qml
app/qml/tests/autopilot/: run
app/qml/tests/autopilot/sherlock/main/: test_main.py
cmake/: FindIntltool.cmake
data/: adlegant-scope.mefrio-g_adlegant-scope.ini.in
include/api/: config.h
po/: POTFILES.in  adlegant-scope.pot
scope/: CMakeLists.txt
scope/include/api/: client.h
scope/po/: POTFILES.in  sherlock-scope.pot
scope/src/: CMakeLists.txt
src/api/: client.cpp
src/scope/: preview.cpp  query.cpp
